tests/positive/VisibilityPrecendence/Package.juvix
module Package;

import PackageDescription.V2 open;

package : Package :=
  defaultPackage@{
    name := "test075";
  };
