tests/negative/AmbiguousPackageId/Package.juvix
module Package;

import PackageDescription.V2 open;

package : Package :=
  defaultPackage@?{
    name := "ambiguouspackageid";
    dependencies := [path "dep1"; path "dep2"];
  };
